--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login Page</title>
+	<title>Home Page</title>
+	<link rel="stylesheet" type="text/css" href="style/main.css">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-	<div class="login-form">
-		<center><h1>Login Here</h1></center>
-		<form class="form-box" action="" method="post">
-			<p>Username</p>
-			<input class="username" type="text" name="username" placeholder="" value="" autofocus="autofocus">
-			<p>Password</p>
-			<input class="password" type="password" name="password" placeholder="" value="" autofocus="autofocus"><br>
-			<input class="button" type="submit" name="submit" value="Login">
-			<br>
-			<a href="#">Register</a>
-		</form>
-	</div>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="#contact-us">Contact Us</a></li>
+  <li><a href="about-us.html">About Us</a></li>
+  <li style="float:right"><a class="active" href="sign_in.html">Login</a></li>
+</ul>
+<header class="heading">
+<h1 class="intro">Lima Salon</h1>
+<p class="headIntro">Gorgeous and Elegant Salon that Fits To Your Style</p>
+<img  src="images/gif-bounce-arrow.gif" alt="Down_arrow">
+</header>
+<section id="findmore">
+	<div class="slideshow-container">
+  <div class="mySlides fade">
+    
+    <img src="images/img1.jpg" style="width:100%">
+    <div class="text">Gorgeous Salon</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="images/img2.jpg" style="width:100%">
+    <div class="text">Elegant Design</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="images/img3.jpg" style="width:100%">
+    <div class="text">Luxurius</div>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+</section>
+<footer>
+	<p class="footertxt">Lima Website</p>
+</footer>
+<script src="slideshow.js"></script>
 </body>
 </html>
